<?xml version="1.0"?>
<package>
  <name>bgtotesim_psp</name>
  <version>0.0.0</version>
  <description>The bgtotesim_psp_node package</description>

  <maintainer email="engineering@berkshiregrey.com">BG Engineering</maintainer>
  <license>Proprietary</license>
  <url type="repository">https://github.com/berkshiregrey/bg_core</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>common_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>perception_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>common_msgs</run_depend>

</package>
